modified: icon cart, cart-full

--- a/index.html
+++ b/index.html
@@ -58,9 +58,12 @@
             <h2>K-Courses</h2>
           </div>
           <div class="col">
-            <ul>
+            <ul class="lista-submenu">
               <li class="submenu">
-                <img src="/assets/image/cart.png" id="img-carrito" />
+                <!-- <img src="/assets/image/cart.png" id="img-carrito" /> -->
+                <div id="icon-cart" class="w-100 text-center icon-cart">
+                  <i class="fa-solid fa-cart-shopping fs-5"></i>
+                </div>
                 <div id="carrito">
                   <table id="lista-carrito" class="w-100 table">
                     <thead>
@@ -78,7 +81,7 @@
                   <button
                     id="vaciar-carrito"
                     type="button"
-                    class="btn btn-outline-primary w-100"
+                    class="btn btn-outline-warning w-100"
                   >
                     Vaciar Carrito
                   </button>
